--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -359,6 +359,7 @@ header {
   color: #000;
   background-color: #fff;
   box-sizing: border-box;
+  margin-bottom: 5px;
 }
 .button_hover {
   box-sizing: border-box;
@@ -366,6 +367,7 @@ header {
   color: #fff;
   background: #5aa8ff;
   // background: #fff url("../img/choose_rb.png") no-repeat right bottom/15px;
+
 }
 .button_minus {
   border-right: 1px solid #c1c1c1;
