--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="ul_contrl" ng-if="coupon_id==2">
 			<p class="chanpin_name">中国平安-500万航空意外险</p>
-			<p class="pei_300">航空意外身故/伤残保险金：500万元<span>500</span>万</p>
+			<p class="pei_300">航空意外身故/伤残保险金:<span>500</span>万</p>
 		</div>
 		<div class="ul_contrl" ng-if="coupon_id==3">
 			<div class="ul_contrl_top">
