--- a/app/css/bdm_list.css
+++ b/app/css/bdm_list.css
@@ -3,8 +3,6 @@ body {
   background-color: #f5f5f5; }
 .left {
   float: left; }
-.right {
-  float: right; }
 header {
   background-color: #fff;
   padding: 17px  25px;
@@ -32,7 +30,7 @@ header .subtitle {
 .container {
   padding: 0.12rem;
   background-color: #f5f5f5;
-  margin-bottom: 40px; }
+  margin-bottom: 60px; }
 .nav {
   background-color: #fff;
   border-top: 1px solid #e2e2e2;
@@ -138,6 +136,7 @@ header .subtitle {
   right: 10px;
   top: 20%; }
 .sub-container {
+  padding-left: 12px;
   position: relative;
   color: #588dd4;
   font-size: 13px;
@@ -145,8 +144,7 @@ header .subtitle {
   height: 50px;
   line-height: 50px; }
 .sub-container .bd-score {
-  float: left;
-  padding-left: 12px; }
+  float: left; }
 .sub-container .bd-score span {
   font-size: 20px;
   font-weight: bold; }
@@ -173,6 +171,9 @@ header .subtitle {
   width: 99%;
   z-index: 5;
    }
+.examples_ctrl {
+  margin-top: -0.62rem;
+  margin-bottom: none; }
 .hairlines .bottom {
   height: 7px; }
 .bottom .linebox {
@@ -188,7 +189,8 @@ header .subtitle {
 .example {
   font-size: 0.25rem;
   color: #ff5c00;
-  float: right; }
+  float: right;
+  padding-right: 12px; }
 .pay_container {
   overflow: hidden;
   position: fixed;
@@ -224,27 +226,29 @@ header .subtitle {
 .cell_hd {
   height: 44px; }
 .offer {
-  padding: 10px 55px;
+  padding: 10px .2rem;
   background: #fff;
-  color: #555; }
+  color: #555;
+  margin-top: -0.4rem;
+  margin-bottom: 75px;
+  font-size: 13px;
+  box-sizing: border-box;
+  border-bottom: 1px solid #d2d2d2; }
   .offer img {
     width: 15px;
-    vertical-align: middle;
-    margin-right: 10px; }
+    vertical-align: middle; }
   .offer .lei {
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex; }
+    text-align: center; }
+    .offer .lei .word:nth-child(1) {
+      margin-bottom: 5px; }
     .offer .lei .word {
-      display: inline-block; }
-.tigong {
-  font-size: 13px;
-  text-align: center; }
+      width: 100%; }
+      .offer .lei .word .marRight_20 {
+        margin-right: 70px; }
+  .offer .tigong {
+    font-size: 13px;
+    text-align: center;
+    margin-bottom: 10px; }
 .tip {
   width: 100%;
   text-align: center;
