--- a/app/css/information.css
+++ b/app/css/information.css
@@ -49,6 +49,10 @@ body {
       color: #ff5c00;
       font-size: 12px;
       margin-left: 10px; }
+  .information_controller .warn {
+    font-size: 12px;
+    color: #999;
+    padding: 2px 0 0 20px; }
   .information_controller .insurance_name {
     font-size: 13px;
     color: #555;
@@ -92,12 +96,27 @@ body {
     margin-bottom: 11px; }
   .information_controller .info_toast {
     overflow-y: scroll;
-    padding: 0;
-    padding-right: 5px;
-    border: .35rem solid #fff;
-    border-right: .2rem solid #fff;
     max-height: 3.63rem;
+    padding: 0;
+    padding-right: 15px;
+    border: .35rem solid #fff;
+    border-right: .12rem solid #fff;
     background: #fff;
+    font-size: 14px;
+    line-height: 20px;
+    position: fixed;
+    z-index: 3;
+    top: .8rem;
+    width: 90%;
+    min-height: 4.6em;
+    margin: auto;
+    word-wrap: break-word;
+    word-break: break-all;
+    color: #4e4e4e;
+    border-radius: 5px;
+    box-sizing: border-box;
+    right: 0;
+    left: 0;
     -webkit-overflow-scrolling: touch; }
     .information_controller .info_toast .toast_head {
       box-sizing: border-box;
