--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_detail.css?rev=78f4ef29e7572649ad58a8a040703409">
+<link rel="stylesheet" type="text/css" href="css/bdm_detail.css?rev=dsfdgfgfdgf">
 <div ng-if="isTest == false"  cg-busy="loadingPromise" style="margin-bottom: 50px;">
 	<div class="wrapper " id="my_baodan">
 		<img src="img/yiyanzhen.png"  ng-show="data.status==3" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;">
@@ -72,7 +72,28 @@
 						</td>
 					</tr>
 				</table>
-
+				<div class="bd-wrapper"  style="display: block;"><!-- ng-if="data.image_urls.length>0" -->
+					<div  class="bd-name">
+					保单照片
+					<div  class="yanzhen-btn fr " ng-class="{'fail':data.status==2}" ng-show="data.status==1" ng-click="policy_verfiy()">{{yanzhentext}}</div>
+					<div  class="yanzhen-btn fr success" ng-show="data.status==3">验真成功</div>
+					<div  class="yanzhen-btn fr fail" ng-show="data.status==4">验真失败</div>
+					<div  class="yanzhen-btn fr fail" ng-show="data.status==2">验真中</div>
+					</div>
+					<div class="fail-tip " ng-show="data.status==4" >
+					   	未查到您的保单信息<br/>
+					   	请尝试其他方式验真
+					   	<div style="margin-top: 8px;" ng-click="goVerifyInfoPage(data.verify_info_id); $event.stopPropagation();"  >
+						   	<div class="yanzhen-btn">
+						   	  官网验真
+						   	</div>
+					   </div>
+					</div>
+					<div class="bd-pic-container"  ng-click="preview()">
+						<img ng-src="{{data.image_urls[0]}}"  />
+						<div class="number">{{data.image_urls.length}}张</div>
+					</div>
+				</div>
 				<table style="margin-top: 0.25rem;">
 					<tr class="bd_th" >
 						<th style="text-align: left;" colspan="2">被保人信息</th>
@@ -120,7 +141,7 @@
 		</div>
 	</div>
 
-	<div class="bd-wrapper" ng-if="data.image_urls.length>0">
+	<!-- <div class="bd-wrapper"  ng-if="data.image_urls.length>0" style="display: block;">
 		<div  class="bd-name">
 		保单照片
 		<div  class="yanzhen-btn fr " ng-class="{'fail':data.status==2}" ng-show="data.status==1" ng-click="policy_verfiy()">{{yanzhentext}}</div>
@@ -141,7 +162,7 @@
 			<img ng-src="{{data.image_urls[0]}}"  />
 			<div class="number">{{data.image_urls.length}}张</div>
 		</div>
-	</div>
+	</div> -->
 </div>
 
 <div>
@@ -238,13 +259,19 @@
 						<td>
 							<span class="gray">保障期限</span>
 							<div style="position: relative;">
-								<img src="img/cover.png" style="position: absolute;top:0.1rem;left:0.5rem;width:0.8rem;" />
+								<img src="img/cover.png" style="position: absolute;top:0;left:0.5rem;width:0.8rem;" />
 							</div>
 						</td>
 						<td colspan="2">2016.03.03 00:00:00-2016.03.09 24:00:00</td>
 					</tr>
 				</table>
-
+				<div class="bd-wrapper">
+					<div  class="bd-name">保单照片</div>
+					<div class="bd-pic-container">
+						<img src="img/pic.jpg"  />
+						<div class="number">88张</div>
+					</div>
+				</div>
 				<table style="margin-top: 0.2rem;">
 					<tr class="bd_th">
 						<th style="text-align: left;">被保人信息</th>
@@ -332,13 +359,7 @@
 		</div>
 	</div>
 
-	<div class="bd-wrapper">
-		<div  class="bd-name">保单照片</div>
-		<div class="bd-pic-container">
-			<img src="img/pic.jpg"  />
-			<div class="number">88张</div>
-		</div>
-	</div>
+	
 	<div class="btn40" style="background:#f5f5f5"></div>
 
 	<div class="tail-container">
