--- a/app/partials/education.html
+++ b/app/partials/education.html
@@ -1,4 +1,4 @@
-<div class="wrapper" data-ng-init="init()"  style="margin-bottom: 80px;">
+<div data-ng-init="init()"  style="margin-bottom: 80px;">
 	
 	<div class="ed-container"  ng-if="type=='2'">
 		<h4>重大疾病发生率</h4>
@@ -13,16 +13,16 @@
 		<h4>保障额度</h4>
 		<img ng-src="img/ed_ed.jpg">
 	</div>
-	<div class="ed-container"  ng-if="type=='4'">
-		<h4>常见意外发生及死亡率</h4>
-		<img ng-src="img/ed_tw.png">
-		<h4>意外导致后果概率</h4>
-		<img ng-src="img/ed_gl.png">
-		<h4>保障额度</h4>
-		<p>建议为年收入加负债的2-10倍</p>
+	<div class="ed-container accident"  ng-if="type=='4'">
+		<div class="headline"><img src="img/white_dun.png">常见意外发生及死亡率</div>
+		<div class="die_img_ctrl"><img src="img/yw_rh_1.png" ></div>
+		<div class="h_10"></div>
+	    <div class="headline"><img src="img/white_dun.png">意外导致后果概率</div>
+	    <div class="die_img_ctrl"><img src="img/yw_rh_2.png" ></div>
+	    <div class="h_10"></div>
+		<div class="headline"><img src="img/white_dun.png">保障额度</div>
+		<p>建议为年收入加负债的<span>2-10倍</span></p>
 	</div>
-	
-	
 </div>
 
 <div class="fix_container" ng-show="type==2">
