--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -12,7 +12,7 @@
 </div>
 <!-- <div class="table-wrapper" id="coverage_table"  data-ng-init="init()"  ng-class="{'border-bt': data.coverages.length<=(showNum+1)}"> -->
 <div class="table-wrapper" id="coverage_table"  data-ng-init="init()">
-	<table>
+	<table class="table">
 		<tr ng-repeat="coverage in data.mainCoverages"   style="display: none"  on-finish-render="ngRepeatFinished"><td  class="left-td" des="{{coverage.description}}"><div>{{coverage.name}}<div class="qa" ng-show="coverage.description"></div></div><!--<div  class="des" class="ng-hide">{{coverage.description}}</div>--></td><td class="right-td">{{processSpecialMoney(coverage.sum_insured)}}</td></tr>
 		<tr  ng-if="data.secondCoverages.length>0"  style="display: none"><td colspan="2"  style="text-align:left;font-size:15px;font-weight: bold;"><span style="display:inline-block;width: 2px;background:#55a5ff;height: 15px;position:relative;top:2px;left:0;"></span> 次要责任</td></tr>
 		<tr ng-repeat="coverage in data.secondCoverages"  style="display: none"  on-finish-render="ngRepeatFinished"><td  class="left-td" des="{{coverage.description}}"><div>{{coverage.name}}<div class="qa" ng-show="coverage.description"></div></div><!--<div  class="des" class="ng-hide">{{coverage.description}}</div>--></td><td class="right-td">{{processSpecialMoney(coverage.sum_insured)}}</td> </tr>
@@ -62,7 +62,7 @@
 	<a href="javascript:void(0)" class="btn btn_n_primary right" ng-click="goInfo()">立即投保</a>
 	</div>
 </div>
-
+<script type="text/javascript" src="js/zepto.min.js"></script>
 </div>
 <script type="text/javascript">
  $("body").on("touchmove",".toast",function(event){
@@ -91,6 +91,100 @@
 	*/
 
  });
+	Zepto(function($){
+$('.table').on('click', function(){
+function preventDefault(e) {
+            e = e || window.event;
+            e.preventDefault && e.preventDefault();
+            e.returnValue = false;
+        }
 
+        function stopPropagation(e){
+			// e = e || window.event;
+			e.stopPropagation && e.stopPropagation();
+			e.cancelBubble = false;
+        }
+
+        function innerScroll(e){
+        	// 阻止冒泡到document
+        	// document上已经preventDefault
+        	stopPropagation(e);
+
+			var delta = e.wheelDelta || e.detail || 0;
+			var box = $(this).get(0);
+
+			if($(box).height() + box.scrollTop >= box.scrollHeight){
+				if(delta < 0) {
+					preventDefault(e);
+					return false;
+				}
+			}
+			if(box.scrollTop === 0){
+				if(delta > 0) {
+					preventDefault(e);
+					return false;
+				}
+			}
+			//会阻止原生滚动
+			return true;
+        }
+         
+		var disableScroll = function(){
+			$(document).on('mousewheel', preventDefault);
+			$(document).on('touchmove', preventDefault);
+		};
+        
+		var enableScroll = function(){
+			$(document).off('mousewheel', preventDefault);
+			$(document).off('touchmove', preventDefault);
+		};
+		// 内部可滚
+		
+		disableScroll();
+		$('.mask').on('click', function(e){
+			$(this).hide();
+			$(this).hide();
+			enableScroll();
+		});
+		$('.mask').on('mousewheel', innerScroll);
+		// 外部禁用
+		// 移动端touch重写
+		var startX, startY;
+		$('.mask').on('touchstart', function(e){
+			startX = e.changedTouches[0].pageX;
+			startY = e.changedTouches[0].pageY;
+		});
+
+		// 仿innerScroll方法
+		$('.toast').on('touchmove', function(e){
+			e.stopPropagation();
+			var deltaX = e.changedTouches[0].pageX - startX;
+			var deltaY = e.changedTouches[0].pageY - startY;
+
+			// 只能纵向滚
+			if(Math.abs(deltaY) < Math.abs(deltaX)){
+				e.preventDefault();
+				return false;
+			}
+
+			var box = $(this).get(0);
+
+			if($(box).height() + box.scrollTop >= box.scrollHeight){
+				if(deltaY < 0) {
+					e.preventDefault();
+					return false;
+				}
+			}
+			if(box.scrollTop === 0){
+				if(deltaY > 0) {
+					e.preventDefault();
+					return false;
+				}
+			}
+			// 会阻止原生滚动
+			// return false;
+		});
+	});
+});
 
 </script>
