--- a/app/sass/bdm_list.scss
+++ b/app/sass/bdm_list.scss
@@ -6,9 +6,6 @@ body {
 .left {
 	float: left;
 }
-.right {
-	float: right;
-}
 header {
 	background-color: #fff;
 	padding: 17px  25px;
@@ -46,7 +43,7 @@ header .subtitle {
 .container {
 	padding: 0.12rem;
 	background-color: #f5f5f5;
-	margin-bottom: 40px;
+	margin-bottom: 60px;
 }
 .nav {
 	background-color: #fff;
@@ -185,6 +182,7 @@ header .subtitle {
 	top: 20%;
 }
 .sub-container {
+	padding-left: 12px;
 	position: relative;
 	color: #588dd4;
 	font-size: 13px;
@@ -196,7 +194,7 @@ header .subtitle {
 
 .sub-container .bd-score{
 	float:left;
-	padding-left: 12px;
+	// padding-left: 12px;
 }
 .sub-container .bd-score span{
 	font-size: 20px;
@@ -233,6 +231,10 @@ header .subtitle {
 	/*box-shadow:0px 4px 6px -2px #d2d2d2;*/
 	/*background: -webkit-linear-gradient(top,white 90%, #dadada 95%);*/
 }
+.examples_ctrl {
+	margin-top: -0.62rem;
+	margin-bottom: none;
+}
 .hairlines .bottom{
 	height: 7px;
 }
@@ -253,6 +255,7 @@ header .subtitle {
 	font-size: 0.25rem;
 	color: #ff5c00;
 	float: right;
+	padding-right: 12px;
 }
 .pay_container {
 	overflow: hidden;
@@ -298,26 +301,39 @@ header .subtitle {
 	height: 44px;
 }
 .offer {
-	padding: 10px 55px;
+	padding: 10px .2rem;
 	background: #fff;
     color: #555;
+    margin-top: -0.4rem;
+    // height: 90px;
+    margin-bottom: 75px;
+    font-size: 13px;
+    box-sizing: border-box;
+    border-bottom: 1px solid #d2d2d2;
 	img {
     	width: 15px;
     	vertical-align: middle;
-    	margin-right: 10px;
+    	// margin-right: 10px;
     }
     .lei {
-    	@include justify-content(center);
-    	@include flexbox;
+	    text-align: center;
+        .word:nth-child(1) {
+        	margin-bottom: 5px;
+        }
     	.word {
-    		display: inline-block;
+    		width: 100%;
+    		.marRight_20 {
+    			margin-right: 70px;
+    		}
     	}
     }
+    .tigong {
+	    font-size: 13px;
+	    text-align: center;
+	    margin-bottom: 10px;
+	}
 }
-.tigong {
-    font-size: 13px;  
-    text-align: center; 
-}
+
 .tip {
 	width: 100%;
 	text-align: center;
