--- a/app/sass/information.scss
+++ b/app/sass/information.scss
@@ -66,6 +66,11 @@ body{
 			margin-left: 10px;
 		}
 	}
+	.warn {
+		font-size: 12px;
+		color: #999;
+		padding: 2px 0 0 20px;
+	}
 	.insurance_name {
 		font-size: 13px;
 		color: #555;
@@ -112,17 +117,32 @@ body{
 		line-height: 25px;
 		margin-bottom: 11px;
 	}
-
 	// 弹窗
 	.info_toast {
 		// overflow: scroll;
-	    overflow-y: scroll; //显示纵向滚动条
+		overflow-y: scroll; //显示纵向滚动条
+	    max-height: 3.63rem;
 		padding: 0;
-		padding-right: 5px;
+		padding-right: 15px;
 		border: .35rem solid #fff;
-		border-right: .2rem solid #fff;
-		max-height: 3.63rem;
+		border-right: .12rem solid #fff;
 		background: #fff;
+		font-size: 14px;
+	    line-height: 20px;
+	    position: fixed;
+	    z-index: 3;
+	    top: .8rem;
+	    width: 90%;
+	    // max-width: 400px;
+	    min-height: 4.6em;
+        margin: auto;
+        word-wrap: break-word;
+	    word-break: break-all;
+	    color: #4e4e4e;
+	    border-radius: 5px;
+	    box-sizing: border-box;
+        right: 0;
+        left:0;
 		-webkit-overflow-scrolling: touch;
 		.toast_head {
 			box-sizing: border-box;
@@ -146,7 +166,21 @@ body{
 		}
 	}
 }
-
+//  #info_toast::-webkit-scrollbar {
+//     width: 2px;
+//     background-color: #F5F5F5;
+// }
+// #info_toast::-webkit-scrollbar-thumb {
+//     border-radius: 10px;
+//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+//     background-color: #D62929;
+// }
+// #info_toast::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+//     border-radius: 10px;
+//     background-color: #F5F5F5;
+// }
+	
 
 
 .cut_container {
