--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=rtyrtrye">
+<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=29ea553b6eac3b13f0d9059ed2bcbf08">
 <header>
 	<div class="left">
 		<!--
