--- a/app/partials/education.html
+++ b/app/partials/education.html
@@ -26,11 +26,11 @@
 </div>
 
 <div class="fix_container" ng-show="type==2">
-	<a href="javascript:void(0)" class="btn btn_n_primary"  ng-click="goDingzhi()" id="submitButton" style="">提升健康保障</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary_new "  ng-click="goDingzhi()" id="submitButton" style="">提升健康保障</a>
 </div>
 <div class="fix_container" ng-show="type==3">
-	<a href="javascript:void(0)" class="btn btn_n_primary"  ng-click="goDingzhi()" id="submitButton" style="">提升人寿保障</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary_new"  ng-click="goDingzhi()" id="submitButton" style="">提升人寿保障</a>
 </div>
 <div class="fix_container" ng-show="type==4">
-	<a href="javascript:void(0)" class="btn btn_n_primary"  ng-click="goDingzhi()" id="submitButton" style="">提升意外保障</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary_new"  ng-click="goDingzhi()" id="submitButton" style="">提升意外保障</a>
 </div>
