--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=478d6ecfd285c0df25a809abc6aac5c2">
+<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=jkdshfhsf">
 
 <div  cg-busy="myPromise" >
 	<header>
