--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -362,8 +362,7 @@ header {
   margin-bottom: 5px;
 }
 .button_hover {
-  box-sizing: border-box;
-  border: none;
+  border: 1px solid #5aa8ff;
   color: #fff;
   background: #5aa8ff;
   // background: #fff url("../img/choose_rb.png") no-repeat right bottom/15px;
