--- a/app/sass/bd_education_new.scss
+++ b/app/sass/bd_education_new.scss
@@ -12,7 +12,7 @@
 		color:#fff;
 		height:49px;
 		line-height: 49px;
-		padding:5px 0.2rem 5px 50px;
+		padding:0 0.2rem 0 50px;
 		// font-size:0.18rem;
 		font-size: 15px;
 	}
