wxwx—_index/popup

--- a/app/css/userinfo_new.css
+++ b/app/css/userinfo_new.css
@@ -1,42 +1,27 @@
 @charset "UTF-8";
 body {
-  background: #f5f5f5;
   line-height: normal; }
-.hobby {
+.userinfo_new {
   padding: 20px 0;
-  color: #555;
   font-size: 15px;
   text-align: center;
    }
-  .hobby .piont {
+  .userinfo_new .setting {
+    font-size: 16px; }
+  .userinfo_new .highest {
     color: #999;
-    margin-bottom: 10px; }
-  .hobby .trouble {
-    margin: 20px 0 10px 0; }
-  .hobby .select {
-    color: #999;
-    font-size: 13px;
-    margin-bottom: 15px; }
-  .hobby .relation {
-    position: relative; }
-    .hobby .relation .btn_ctrl img {
-      width: 15px; }
-    .hobby .relation .btn {
-      margin: 0 auto;
-      display: inline-block;
-      width: 190px;
-      height: 44px;
-      line-height: 44px;
-      background: #fff;
-      border-radius: 5px;
-      margin-bottom: 5px;
-      box-sizing: border-box;
-      border: 1px solid #e2e2e2; }
-    .hobby .relation .blue {
-      background: #55a5ff;
-      color: #fff;
-      border: none; }
-  .hobby .switch {
+    margin: 30px 0 15px 0; }
+  .userinfo_new .sex {
+    margin: 20px 0 15px 0;
+    color: #999; }
+  .userinfo_new .age {
+    margin: 25px 0 0;
+    color: #999; }
+  .userinfo_new .blue {
+    color: #55a5ff;
+    font-size: 17px;
+    font-weight: bold; }
+  .userinfo_new .switch {
     position: relative;
     display: block;
     vertical-align: top;
@@ -49,13 +34,13 @@ body {
     cursor: pointer;
     border: none;
     margin-bottom: 10px; }
-  .hobby .switch-input {
+  .userinfo_new .switch-input {
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0;
     -webkit-tap-highlight-color: transparent; }
-  .hobby .switch-label {
+  .userinfo_new .switch-label {
     position: relative;
     display: block;
     height: inherit;
@@ -66,7 +51,7 @@ body {
     box-sizing: border-box;
     border: 1px solid #e2e2e2;
     font-family: Arial, Microsoft YaHei, SimHei, Helvetica, sans-serif; }
-  .hobby .switch-label:before, .hobby .switch-label:after {
+  .userinfo_new .switch-label:before, .userinfo_new .switch-label:after {
     position: absolute;
     top: 50%;
     margin-top: -.5em;
@@ -75,22 +60,22 @@ body {
     -moz-transition: inherit;
     -o-transition: inherit;
     transition: inherit; }
-  .hobby .switch-label:before {
+  .userinfo_new .switch-label:before {
     content: attr(data-off);
     right: 30px;
     color: #555; }
-  .hobby .switch-label:after {
+  .userinfo_new .switch-label:after {
     content: attr(data-on);
     left: 30px;
     color: #555;
     opacity: 0; }
-  .hobby .switch-input:checked ~ .switch-label {
+  .userinfo_new .switch-input:checked ~ .switch-label {
     background: #f0f0f0; }
-  .hobby .switch-input:checked ~ .switch-label:before {
+  .userinfo_new .switch-input:checked ~ .switch-label:before {
     opacity: 0; }
-  .hobby .switch-input:checked ~ .switch-label:after {
+  .userinfo_new .switch-input:checked ~ .switch-label:after {
     opacity: 1; }
-  .hobby .switch-handle {
+  .userinfo_new .switch-handle {
     position: absolute;
     top: 3px;
     left: 4px;
@@ -98,8 +83,16 @@ body {
     height: 45px;
     background-color: #55a5ff;
     border-radius: 44px; }
-  .hobby .switch-handle:before {
-    content: "重点";
+  .userinfo_new .switch-hand {
+    position: absolute;
+    top: 3px;
+    left: 4px;
+    width: 90px;
+    height: 45px;
+    background-color: #55a5ff;
+    border-radius: 44px; }
+  .userinfo_new .switch-handle:before {
+    content: "是";
     position: absolute;
     color: #fff;
     font-size: 17px;
@@ -109,15 +102,39 @@ body {
     height: 45px;
     line-height: 45px;
     font-family: Arial, Microsoft YaHei, SimHei, Helvetica, sans-serif; }
-  .hobby .switch-input:checked ~ .switch-handle:before {
-    content: "全面"; }
-  .hobby .switch-input:checked ~ .switch-handle {
+  .userinfo_new .switch-hand:before {
+    content: "男";
+    position: absolute;
+    color: #fff;
+    font-size: 17px;
+    top: 0;
+    left: 0;
+    width: 90px;
+    height: 45px;
+    line-height: 45px;
+    font-family: Arial, Microsoft YaHei, SimHei, Helvetica, sans-serif; }
+  .userinfo_new .switch-input:checked ~ .switch-handle:before {
+    content: "否"; }
+  .userinfo_new .switch-input:checked ~ .switch-hand:before {
+    content: "女"; }
+  .userinfo_new .switch-input:checked ~ .switch-handle {
     -webkit-transform: translateX(70px);
     -moz-transform: translateX(70px);
     -ms-transform: translateX(70px);
     -o-transform: translateX(70px);
     transform: translateX(70px); }
-  .hobby .switch-label, .hobby .switch-handle {
+  .userinfo_new .switch-input:checked ~ .switch-hand {
+    -webkit-transform: translateX(70px);
+    -moz-transform: translateX(70px);
+    -ms-transform: translateX(70px);
+    -o-transform: translateX(70px);
+    transform: translateX(70px); }
+  .userinfo_new .switch-label, .userinfo_new .switch-handle {
+    transition: All 0.3s ease;
+    -webkit-transition: All 0.3s ease;
+    -moz-transition: All 0.3s ease;
+    -o-transition: All 0.3s ease; }
+  .userinfo_new .switch-label, .userinfo_new .switch-hand {
     transition: All 0.3s ease;
     -webkit-transition: All 0.3s ease;
     -moz-transition: All 0.3s ease;
