--- a/app/partials/target.html
+++ b/app/partials/target.html
@@ -1,15 +1,13 @@
 <link rel="stylesheet" href="css/ensuring_target.css">
 <div class="target_ctrl">
-	<div>确定保障对象</div>
-	<div>我们将提供智能配置</div>
+	<div class="who">为谁投保？</div>
+	<div class="first">建议优先保障家庭收入最高者</div>
 	<div class="relation" id="relation">
-		<div class="btn">自己</div>
-		<div class="btn">父母</div>
-		<div class="btn">配偶</div>
-		<div class="btn">子女</div>
-		<div class="btn">整个家庭</div>
+		<div class="btn">自 己</div>
+		<div class="btn">配 偶</div>
+		<div class="btn">父 母</div>
+		<div class="btn">子 女</div>
 	</div>
-	<div class="point">预算有限 建议优先保障家庭收入支柱</div>
 	<div class="target_btn">下一步</div>
 </div>
 <script>
