--- a/app/css/ensuring_target.css
+++ b/app/css/ensuring_target.css
@@ -2,28 +2,37 @@
 body {
   background: #f5f5f5; }
 .target_ctrl {
-  padding: 10px 0;
+  padding: 10px 60px;
   color: #555;
-  font-size: 15px;
   text-align: center; }
+  .target_ctrl .who {
+    font-size: 18px; }
+  .target_ctrl .first {
+    color: #999;
+    font-size: 13px; }
   .target_ctrl .relation {
-    margin-top: 40px; }
+    margin-top: 40px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap; }
     .target_ctrl .relation .btn {
       margin: 0 auto;
-      width: 140px;
-      line-height: 44px;
+      width: 1.16rem;
+      height: 1.16rem;
+      line-height: 1.16rem;
       background: #fff;
       border: 1px solid #e2e2e2;
-      border-radius: 5px;
+      border-radius: 50%;
       box-sizing: border-box;
-      margin-bottom: 5px; }
+      margin-bottom: 20px; }
     .target_ctrl .relation .blue {
       color: #fff;
       background: #55a5ff; }
-  .target_ctrl .point {
-    font-size: 13px;
-    color: #999;
-    margin-top: 40px; }
   .target_ctrl .target_btn {
     position: fixed;
     left: 0;
